clouds in process

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/normalize.css">
+    <!-- <link rel="stylesheet" href="./assets/normalize.css"> -->
     <link rel="stylesheet" href="./assets/index.css">
     <title>Clouds and Moon</title>
 </head>
@@ -17,6 +17,12 @@
                 </div>
                 <div class="page__cloud">
                     <img src="./assets/img/cloud-right.png" alt="Cloud">
+                </div>
+                <div class="page__moon moon">
+                    <div class="moon__box">
+                        <div class="moon__item"></div>
+                    </div>
+
                 </div>
             </div>
         </main>
