--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="wrapper">
         <main class="page">
             <div class="page__clouds">
-                <div class="page__cloud">
+                <div class="page__cloud cloud-left">
                     <img src="./assets/img/cloud-left.png" alt="Cloud">
                 </div>
-                <div class="page__cloud">
+                <div class="page__cloud cloud-right">
                     <img src="./assets/img/cloud-right.png" alt="Cloud">
                 </div>
                 <div class="page__moon moon">
